--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,17 @@
 
   <build>
 	  <testSourceDirectory>tests</testSourceDirectory>
-	  <sourceDirectory>src</sourceDirectory>      
+      <plugins>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <configuration>
+                  <source>8</source>
+                  <target>8</target>
+              </configuration>
+          </plugin>
+      </plugins>
+      <sourceDirectory>src</sourceDirectory>
 	  <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
